schema/testdata/validation_unresolvable_lhs_with_incorrect_operator/schema.keel
model Post {
  fields {
    title Text
    published Boolean
  }

  operations {
    get posts(id) {
      @where(post.titles = 123)
    }
  }
}

