schema/testdata/errors/unresolvable_lhs_with_incorrect_operator.keel
model Post {
    fields {
        title Text
        published Boolean
    }

    actions {
        get posts(id) {
            //expect-error:20:37:AttributeExpressionError:assignment operator '=' not valid - did you mean to use the comparison operator '=='?
            @where(post.titles = 123)
        }
    }
}
